playing with oauth and trying to get only classes to show per current user but having trouble so removed current user for json builder file and the courses controller. working on the styling to make sure the background image is the whole width and there is no whitespace. did a migration to add an english name column to the poses model

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -274,7 +274,6 @@ header h1 {
   height: 91%;
   background-size: cover;
   background-repeat: no-repeat;
-  background-position-x: -4rem;
 }
 
 .single-pose-details {
